# MusicMind

./: .claudeignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  TODO.md  docker-compose.yml  plan.md  pyproject.toml  setup.py  vercel.json
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 001_initial_schema.py  002_add_refresh_tokens.py  003_add_service_source_to_taste_snapshots.py  004_add_chat_conversations.py  005_add_user_api_keys.py  006_fix_composite_primary_keys.py  007_add_chat_messages_table.py  008_add_audio_embeddings_and_kg_tables.py
backend/src/musicmind/: __init__.py  app.py  config.py
backend/src/musicmind/api/: __init__.py  health.py  rate_limit.py  router.py
backend/src/musicmind/api/chat/: router.py  schemas.py  service.py  system_prompt.py  tool_converter.py  (+1 more)
backend/src/musicmind/auth/: __init__.py  dependencies.py  router.py  schemas.py  service.py
backend/src/musicmind/db/: __init__.py  engine.py  schema.py
backend/src/musicmind/engine/: bandit.py  clap_mood.py  dedup.py  genres.py  lastfm.py  models.py  profile.py  scorer.py  session.py  similarity.py  weights.py
backend/src/musicmind/security/: __init__.py  encryption.py
backend/tests/: conftest.py  test_audio_pipeline.py  test_auth.py  test_auth_foundation.py  test_auth_service.py  test_bandit.py  test_chat_endpoints.py  test_chat_providers.py  test_chat_schema.py  test_chat_service.py  test_clap_mood.py  test_claude_byok.py  test_claude_key.py  test_dedup.py  test_detail_views.py  test_detail_views_schemas.py  test_encryption.py  test_engine_models.py  test_engine_perf.py  test_genre_normalizer.py  test_health.py  test_knowledge_graph.py  test_lastfm.py  test_openai_byok.py  test_recommendations.py  test_schema.py  test_services.py  test_session.py  test_stats.py  test_taste.py  test_tool_converter.py  test_unified_recommendations.py  test_unified_taste.py
(+200 files in other folders)
