[project]
name = "musicmind-web-backend"
version = "0.1.0"
description = "MusicMind Web backend API"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "fastapi>=0.135",
    "uvicorn[standard]>=0.42",
    "asyncpg>=0.31",
    "sqlalchemy>=2.0",
    "alembic>=1.18",
    "cryptography>=42.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "greenlet>=3.0",
    "pyjwt>=2.12.1",
    "bcrypt>=5.0.0",
    "starlette-csrf>=3.0.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.3",
    "aiosqlite>=0.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/musicmind"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
